- Prototype Materials no longer increases the special modifications limit for a character, but instead unlocks a quality called "Special Modifications (Prototype Materials)" that has the same effect as a single level of Special Modifications. Fixes #4872.
- Ares Cheetah now properly has an acceleration of 2.
- Fixed incorrect Matrix CM for the Hardening module. Closes #4909

Changed/New Strings:
- Checkbox_Options_SpecializationsBreakSkillGroups
- MessageTitle_ExtraNativeLanguages
- Message_ExtraNativeLanguages
- Menu_Main_OpenForPrinting
- Menu_Main_OpenForExport
- String_Export_JSON
- Menu_Main_MasterIndex
- Menu_Main_CharacterRoster
- String_Sheet_Blank
- String_Export_Blank
- String_Export_And_Close
- Message_KarmaNuyenExchange
- String_NuyenSymbol
- Button_Unload
- Label_Loaded
- Checkbox_HideAmmo
- Menu_Main_CloseWindow

Removed Strings:
- Message_UnderLanguageLimit
- String_Export_JSON

Build 222
Application Changes:
- Changing AGI or STR values now properly updates movement speeds in the UI.
- Cyberware and bioware with pair bonuses and/or wireless pair bonuses but no `<pairinclude>` or `<wirelesspairinclude>` nodes specified now still have those bonuses applied properly for every pair of item.
- The default Internet Explorer version emulated for the character sheet viewer is now 11 instead of 8.
- Fixed a rare crash that could happen when attempting to print a character.
- Changelogs for newer versions of Chummer now properly show up in the updater before they are downloaded.
- Fixed a rare crash when attempting to convert certain colors to and/or from their dark mode versions.
- Startup times for users with watch folders has been decreased by about 20%.
- Fixed an issue where some cyberware with wireless bonuses that depend on either the presence of other cyberware or on there being multiple instances of the same cyberware would cause that cyberware's bonuses to mysteriously disappear.