@@ -43310,7 +43310,7 @@
 			</mod>
 			<mod>
 				<id>349772a1-1ba6-4cc7-a607-20b02a31d5d1</id>
-				<name>Smart Tire</name>
+				<name>Smart Tires</name>
 				<translate>Smartreifen</translate>
 				<altpage>?</altpage>
 			</mod>
