@@ -44362,8 +44362,8 @@
             </mod>
             <mod>
                 <id>349772a1-1ba6-4cc7-a607-20b02a31d5d1</id>
-                <name>Smart Tire</name>
-                <translate>Pneu intelligent</translate>
+                <name>Smart Tires</name>
+                <translate>Pneus intelligent</translate>
                 <altpage>?</altpage>
             </mod>
             <mod>
