@@ -42800,8 +42800,8 @@
       </mod>
       <mod>
         <id>349772a1-1ba6-4cc7-a607-20b02a31d5d1</id>
-        <name>Smart Tire</name>
-        <translate>Smart Tire</translate>
+        <name>Smart Tires</name>
+        <translate>Smart Tires</translate>
         <altpage>?</altpage>
       </mod>
       <mod>
